--- a/src/components/content/style.module.css
+++ b/src/components/content/style.module.css
@@ -1,8 +1,8 @@
 .container {
-    @apply flex flex-row relative;
+    @apply md:flex md:flex-row relative;
 }
 .menu {
-    @apply flex flex-col w-64 h-screen bg-black text-white fixed pl-5 pr-5 pt-5;
+    @apply flex flex-col w-full md:w-64 md:h-screen bg-black text-white md:fixed pl-5 pr-5 pt-5;
 }
 .nameLogo {
     @apply flex flex-col items-center justify-center w-full p-4 ;
@@ -17,26 +17,29 @@
     @apply w-full h-full absolute;
 }
 .nav {
-    @apply flex flex-col space-y-4 px-6 flex-1;
+    @apply hidden md:flex flex-col space-y-4 px-6 flex-1;
 }
 .navMenu {
     @apply text-white hover:text-orange-500;
 }
+.navMenu2 {
+    @apply text-orange-500 hover:text-orange-500;
+}
 .footerMenu {
-    @apply text-center text-gray-500 text-sm pb-4;
+    @apply text-center text-gray-500 text-sm pb-4 hidden md:flex;
 }
 .content {
-    @apply flex-1 ml-64 h-screen flex h-screen overflow-hidden;
+    @apply md:flex-1 md:ml-64 h-screen w-screen flex md:overflow-hidden;
 }
 .contentPages {
-    @apply flex flex-row h-full transition-transform duration-700 ease-in-out;
+    @apply md:flex md:flex-row h-full w-screen transition-transform duration-700 ease-in-out;
 }
 .sectionPage {
-    @apply flex-shrink-0 h-screen w-[65vw] bg-bg-custom-one text-white flex items-center justify-center
+    @apply flex-shrink-0 md:h-screen md:w-[65vw] bg-bg-custom-one text-white flex items-center justify-center
 }
 .sectionPage2 {
-    @apply flex-shrink-0 h-screen w-[65vw] bg-bg-custom-two text-white flex items-center justify-center
+    @apply flex-shrink-0 md:h-screen md:w-[65vw] bg-bg-custom-two text-white flex items-center justify-center
 }
 .sectionPage3 {
-    @apply flex-shrink-0 h-screen w-[100vw] bg-bg-custom-two text-white flex items-center justify-center
+    @apply flex-shrink-0 md:h-screen md:w-[100vw] bg-bg-custom-two text-white flex items-center justify-center
 }
