--- a/src/pages/about/style.module.css
+++ b/src/pages/about/style.module.css
@@ -1,5 +1,5 @@
 .container {
-    @apply w-full h-screen flex flex-col pl-10 items-start justify-center text-gray-300 inset-0 relative bg-no-repeat bg-cover;
+    @apply w-full h-screen flex flex-col pl-10 pr-10 items-start justify-start pt-20 text-gray-300 inset-0 relative bg-no-repeat bg-cover;
 }
 .description {
     @apply max-w-[800px] relative z-10;
