--- a/src/pages/skill/style.module.css
+++ b/src/pages/skill/style.module.css
@@ -1,8 +1,8 @@
 .container {
-    @apply w-full md:h-screen flex flex-col pl-10 items-start justify-start pt-20 text-gray-300 inset-0 relative bg-no-repeat bg-cover overflow-auto;
+    @apply pr-5 w-full h-full md:h-screen flex flex-col pl-10 items-start justify-start pt-20 text-gray-300 inset-0 relative bg-no-repeat bg-cover overflow-auto;
 }
 .description {
-    @apply max-w-[800px] relative z-10 mb-14;
+    @apply max-w-[800px] relative z-10 mt-5 mb-5;
 }
 .devide {
     @apply w-full border-t-2 border-gray-300;
